--- a/weekly/14.md
+++ b/weekly/14.md
@@ -21,10 +21,16 @@
   - [`test()`](https://jestjs.io/docs/api#testname-fn-timeout)
   - [`expect() methods`](https://jestjs.io/docs/expect)
   - [`describe()`](https://jestjs.io/docs/api#describename-fn)
-- Demo:
+- Demo Files:
   - [`Simple-Unit-Tests` - Start Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests)
   - [`Simple-Unit-Tests-Done` - Complete & Commented Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests-Done)
-  
+- Steps:
+  - `npm i -D jest`
+  - create **/src/utils/math.test.js**
+  - update **package.json**
+  - `npm test`
+  - and so on ...
+
 ---
 ---
 
