--- a/weekly/02B.md
+++ b/weekly/02B.md
@@ -12,4 +12,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 2A Notes**](02A.md)  |  [**IGME-430 Home**](../) | Week 3A Notes
+|   [**Week 2A Notes**](02A.md)  |  [**IGME-430 Home**](../) | [**Week 3A Notes**](03A.md)
